src/ui/czi-cust-style-numbered.css
html {
  counter-reset: C1 C2 C3 C4 C5 C6 C7 C8 C9 C10;

  --czi-counter-bold: 100;
}

.ProseMirror p[data-style-level='1'] {
  counter-increment: C1;

  /* Reset all other variables under the current one. */
  counter-reset: C2 C3 C4 C5 C6 C7 C8 C9 C10;
}

.ProseMirror p[data-style-level='2'] {
  counter-increment: C2;

  /* Reset all other variables under the current one. */
  counter-reset: C3 C4 C5 C6 C7 C8 C9 C10;
}

.ProseMirror p[data-style-level='3'] {
  counter-increment: C3;

  /* Reset all other variables under the current one. */
  counter-reset: C4 C5 C6 C7 C8 C9 C10;
}

.ProseMirror p[data-style-level='4'] {
  counter-increment: C4;

  /* Reset all other variables under the current one. */
  counter-reset: C5 C6 C7 C8 C9 C10;
}

.ProseMirror p[data-style-level='5'] {
  counter-increment: C5;

  /* Reset all other variables under the current one. */
  counter-reset: C6 C7 C8 C9 C10;
}

.ProseMirror p[data-style-level='6'] {
  counter-increment: C6;

  /* Reset all other variables under the current one. */
  counter-reset: C7 C8 C9 C10;
}

.ProseMirror p[data-style-level='7'] {
  counter-increment: C7;

  /* Reset all other variables under the current one. */
  counter-reset: C8 C9 C10;
}

.ProseMirror p[data-style-level='8'] {
  counter-increment: C8;

  /* Reset all other variables under the current one. */
  counter-reset: C9 C10;
}

.ProseMirror p[data-style-level='9'] {
  counter-increment: C9;

  /* Reset all other variables under the current one. */
  counter-reset: C10;
}

.ProseMirror p[data-style-level='10'] {
  counter-increment: C10;
}

.ProseMirror p[data-bullet-color='#0000FF']::before {
  color: #0000FF;
}

.ProseMirror p[data-bullet-color='#000000']::before {
  color: #000000;
}

.ProseMirror p[data-show-bullet='true']::before {
  content: attr(data-bullet-symbol) !important;
  font-weight: normal !important;
}

.ProseMirror p[data-style-level='1'][hide-style-level='true']::before {
  content: counter(C1, decimal) '. ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='1'][hide-style-level='false']::before {
  content: counter(C1, decimal) '. ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='2'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='2'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='3'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='3'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='4'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='4'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='5'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='5'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='6'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='6'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='7'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) '.' counter(C7, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='7'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) '.' counter(C7, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='8'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='8'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='9'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) '.'
    counter(C9, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='9'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) '.'
    counter(C9, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

.ProseMirror p[data-style-level='10'][hide-style-level='true']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) '.'
    counter(C9, decimal) '.' counter(C10, decimal) ' ';
  font-weight: var(--czi-counter-bold);
  display: none;
}

.ProseMirror p[data-style-level='10'][hide-style-level='false']::before {
  content: counter(C1, decimal) '.' counter(C2, decimal) '.'
    counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
    counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) '.'
    counter(C9, decimal) '.' counter(C10, decimal) ' ';
  font-weight: var(--czi-counter-bold);
}

